--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
   web:
     build: .
-    container_name: web
+    container_name: oscaprince-web
     restart: unless-stopped
     networks:
       - proxy
     ports:
       - "8010:8010"
     labels:
-      - "traefik.http.routers.web.rule=Host(`new.oscarprince.ch`)"
-      - "traefik.http.services.web.loadbalancer.server.port=8010"
+      - "traefik.http.routers.oscaprince-web.rule=Host(`new.oscarprince.ch`)"
+      - "traefik.http.services.oscaprince-web.loadbalancer.server.port=8010"
   api:
     build: ./pocketbase/.
     container_name: oscarprince-api
@@ -18,6 +18,9 @@ services:
       - "8011:8011"
     volumes:
       - /data:/pb_data
+    labels:
+      - "traefik.http.routers.oscaprince-api.rule=Host(`new.oscarprince.ch`) && Path('/api')"
+      - "traefik.http.services.oscaprince-api.loadbalancer.server.port=8010"
 
 networks:
   proxy:
