--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,35 @@
 services:
   web:
     build: .
-    container_name: oscaprince-web
+    container_name: oscarprince-web
     restart: unless-stopped
     networks:
       - proxy
     ports:
       - "8010:8010"
     labels:
-      - "traefik.http.routers.oscaprince-web.rule=Host(`new.oscarprince.ch`)"
-      - "traefik.http.services.oscaprince-web.loadbalancer.server.port=8010"
+      - "traefik.http.routers.oscarprince-web.rule=Host(`new.oscarprince.ch`)"
+      - "traefik.http.services.oscarprince-web.loadbalancer.server.port=8010"
+      - "traefik.http.routers.oscarprince-web.entrypoints=websecure"
+      - "traefik.http.routers.oscarprince-web.tls.certresolver=zeusresolver"
   api:
     build: ./pocketbase/.
     container_name: oscarprince-api
     restart: unless-stopped
+    networks:
+      - proxy
     ports:
       - "8011:8011"
     volumes:
       - /data:/pb_data
     labels:
-      - "traefik.http.routers.oscaprince-api.rule=Host(`new.oscarprince.ch`) && Path('/api')"
-      - "traefik.http.services.oscaprince-api.loadbalancer.server.port=8010"
+      - "traefik.http.routers.oscarprince-api.rule=Host(`api.new.oscarprince.ch`)"
+      - "traefik.http.services.oscaprince-api.loadbalancer.server.port=8011"
+      - "traefik.http.routers.oscarprince-api.entrypoints=websecure"
+      - "traefik.http.routers.oscarprince-api.tls.certresolver=zeusresolver"
 
 networks:
   proxy:
     name: proxy
     external: true
+
