--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,15 @@ services:
     ports:
       - "8010:8010"
     labels:
+      - "traefik.http.routers.oscarprince-web-http.rule=Host(`new.oscarprince.ch`)"
+      - "traefik.http.routers.oscarprince-web-http.middlewares=oscarprince-web-https"
+      - "traefik.http.middlewares.oscarprince-web-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.oscarprince-web-http.entrypoints=web"
       - "traefik.http.routers.oscarprince-web.rule=Host(`new.oscarprince.ch`)"
       - "traefik.http.services.oscarprince-web.loadbalancer.server.port=8010"
       - "traefik.http.routers.oscarprince-web.entrypoints=websecure"
       - "traefik.http.routers.oscarprince-web.tls.certresolver=zeusresolver"
+      - "traefik.http.routers.oscarprince-web.tls=true"
   api:
     build: ./pocketbase/.
     container_name: oscarprince-api
@@ -32,4 +37,3 @@ networks:
   proxy:
     name: proxy
     external: true
-
