--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,22 @@ services:
     ports:
       - "8011:8011"
     volumes:
-      - /data:/pb_data
+      - pb_data:/pb_data
     labels:
+      - "traefik.http.routers.oscarprince-api-http.rule=Host(`api.new.oscarprince.ch`)"
+      - "traefik.http.routers.oscarprince-api-http.middlewares=oscarprince-api-https"
+      - "traefik.http.middlewares.oscarprince-api-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.oscarprince-api-http.entrypoints=web"
       - "traefik.http.routers.oscarprince-api.rule=Host(`api.new.oscarprince.ch`)"
-      - "traefik.http.services.oscaprince-api.loadbalancer.server.port=8011"
+      - "traefik.http.services.oscarprince-api.loadbalancer.server.port=8010"
       - "traefik.http.routers.oscarprince-api.entrypoints=websecure"
       - "traefik.http.routers.oscarprince-api.tls.certresolver=zeusresolver"
+      - "traefik.http.routers.oscarprince-api.tls=true"
 
 networks:
   proxy:
     name: proxy
     external: true
+
+volumes:
+  pb_data:
