--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8010:8010"
     labels:
-      - "traefik.http.routers.oscarprince-web-http.rule=Host(`new.oscarprince.ch`)"
+      - "traefik.http.routers.oscarprince-web-http.rule=Host(`oscarprince.ch`)"
       - "traefik.http.routers.oscarprince-web-http.middlewares=oscarprince-web-https"
       - "traefik.http.middlewares.oscarprince-web-https.redirectscheme.scheme=https"
       - "traefik.http.routers.oscarprince-web-http.entrypoints=web"
@@ -26,9 +26,9 @@ services:
     ports:
       - "8011:8011"
     volumes:
-      - pb_volume:/app/data
+      - "./pocketbase-data:/pb/pb_data"
     labels:
-      - "traefik.http.routers.oscarprince-api-http.rule=Host(`api.new.oscarprince.ch`)"
+      - "traefik.http.routers.oscarprince-api-http.rule=Host(`pb.oscarprince.ch`)"
       - "traefik.http.routers.oscarprince-api-http.middlewares=oscarprince-api-https"
       - "traefik.http.middlewares.oscarprince-api-https.redirectscheme.scheme=https"
       - "traefik.http.routers.oscarprince-api-http.entrypoints=web"
@@ -42,7 +42,3 @@ networks:
   proxy:
     name: proxy
     external: true
-
-volumes:
-  pb_volume:
-    name: pb_volume
