--- a/pocketbase/Dockerfile
+++ b/pocketbase/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-ARG PB_VERSION=0.22.6
+ARG PB_VERSION=0.22.8
 
 RUN apk add --no-cache \
     unzip \
@@ -16,6 +16,7 @@ RUN unzip /tmp/pb.zip -d /pb/
 # uncomment to copy the local pb_hooks dir into the image
 # COPY ./pb_hooks /pb/pb_hooks
 
+VOLUME /pb/pb_data
 EXPOSE 8011
 
 # start PocketBase
