fix(docker-compose): update host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "traefik.http.routers.oscarprince-web-http.middlewares=oscarprince-web-https"
       - "traefik.http.middlewares.oscarprince-web-https.redirectscheme.scheme=https"
       - "traefik.http.routers.oscarprince-web-http.entrypoints=web"
-      - "traefik.http.routers.oscarprince-web.rule=Host(`new.oscarprince.ch`)"
+      - "traefik.http.routers.oscarprince-web.rule=Host(`oscarprince.ch`)"
       - "traefik.http.services.oscarprince-web.loadbalancer.server.port=8010"
       - "traefik.http.routers.oscarprince-web.entrypoints=websecure"
       - "traefik.http.routers.oscarprince-web.tls.certresolver=zeusresolver"
@@ -32,7 +32,7 @@ services:
       - "traefik.http.routers.oscarprince-api-http.middlewares=oscarprince-api-https"
       - "traefik.http.middlewares.oscarprince-api-https.redirectscheme.scheme=https"
       - "traefik.http.routers.oscarprince-api-http.entrypoints=web"
-      - "traefik.http.routers.oscarprince-api.rule=Host(`api.new.oscarprince.ch`)"
+      - "traefik.http.routers.oscarprince-api.rule=Host(`pb.oscarprince.ch`)"
       - "traefik.http.services.oscarprince-api.loadbalancer.server.port=8011"
       - "traefik.http.routers.oscarprince-api.entrypoints=websecure"
       - "traefik.http.routers.oscarprince-api.tls.certresolver=zeusresolver"
