--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve:ssr:oscarprince": "node dist/oscarprince/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +18,10 @@
     "@angular/forms": "^20.1.4",
     "@angular/platform-browser": "^20.1.4",
     "@angular/platform-browser-dynamic": "^20.1.4",
+    "@angular/platform-server": "^20.1.4",
     "@angular/router": "^20.1.4",
+    "@angular/ssr": "^20.1.4",
+    "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
@@ -26,7 +30,9 @@
     "@angular/build": "^20.1.4",
     "@angular/cli": "~20.1.4",
     "@angular/compiler-cli": "^20.1.4",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.17.19",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
